semantics/analyzer/tests/snapshots/better_api_semantics__analyzer__tests__compare__compare_union_invalid_data.snap
---
source: semantics/oracle/tests/compare.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "expected i32, found string",
        labels: [
            Label {
                style: Primary,
                message: "expected i32, found string",
                span: Span {
                    start: 112,
                    end: 118,
                },
            },
            Label {
                style: Secondary,
                message: "type defined here",
                span: Span {
                    start: 31,
                    end: 34,
                },
            },
        ],
        note: None,
    },
]
